# amortsched

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.yaml  compose.yml  main.py  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/api/src/amortsched/api/: __init__.py  app.py  deps.py  errors.py  inject.py  middleware.py  validators.py
apps/api/src/amortsched/api/routes/: auth.py  plans.py  schedules.py  users.py
apps/api/tests/: conftest.py  test_auth.py  test_errors.py  test_inject.py  test_plans.py  test_schedules.py  test_users.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/amortsched/cli/: __init__.py  main.py
apps/web/: README.md  pyproject.toml
apps/web/src/amortsched/web/: __init__.py  app.py  deps.py  errors.py  middleware.py  models.py  schema.py
apps/web/src/amortsched/web/routes/: __init__.py  auth.py  plans.py  schedules.py  users.py
apps/web/tests/: conftest.py  test_auth.py  test_errors.py  test_graphql.py  test_plans.py  test_schedules.py  test_users.py
libs/app/: README.md  pyproject.toml
libs/app/src/amortsched/app/: ports.py  schemas.py
libs/app/src/amortsched/app/plans/: __init__.py  _helpers.py  add_interest_rate_change.py  add_one_time_extra_payment.py  add_recurring_extra_payment.py  create_plan.py  delete_plan.py  delete_schedule.py  generate_schedule.py  get_plan.py  get_schedule.py  list_plans.py  list_schedules.py  save_plan.py  save_schedule.py  update_plan.py
libs/app/src/amortsched/app/users/: __init__.py  authenticate.py  get_profile.py  get_user.py  register.py  upsert_profile.py
libs/app/tests/: conftest.py  test_ports.py  test_schemas.py
libs/app/tests/plans/: test_add_interest_rate_change.py  test_add_one_time_extra_payment.py  test_add_recurring_extra_payment.py  test_create_plan.py  test_delete_plan.py  test_delete_schedule.py  test_generate_schedule.py  test_get_plan.py  test_get_schedule.py  test_list_plans.py  test_list_schedules.py  test_save_plan.py  test_save_schedule.py  test_update_plan.py
libs/app/tests/users/: test_authenticate.py  test_get_profile.py  test_get_user.py  test_register.py  test_upsert_profile.py
libs/auth/: README.md  pyproject.toml
libs/auth/src/amortsched/auth/: __init__.py  jwt.py
libs/auth/tests/: test_jwt.py
libs/core/: README.md  pyproject.toml
libs/core/src/amortsched/core/: __init__.py  audit.py  entities.py  errors.py  pagination.py  repositories.py  security.py  specifications.py  utils.py  values.py
libs/core/tests/: test_amortization.py  test_entities.py  test_errors.py  test_security.py  test_specifications.py  test_token_errors.py
libs/data-inmemory/: README.md  pyproject.toml
libs/data-inmemory/src/amortsched/data/inmemory/: __init__.py  filters.py  repositories.py  store.py
libs/data-inmemory/tests/: test_filters.py  test_repositories.py
libs/data-mongo/: README.md  pyproject.toml
libs/data-mongo/src/amortsched/data/mongo/: __init__.py
libs/data-sqlalchemy/: README.md  pyproject.toml
libs/data-sqlalchemy/src/amortsched/data/sqlalchemy/: __init__.py
libs/data-tortoise/: README.md  pyproject.toml
libs/data-tortoise/src/amortsched/data/tortoise/: __init__.py
libs/validators-mashumaro/: README.md  pyproject.toml
libs/validators-mashumaro/src/amortsched/validators/vmashumaro/: __init__.py
libs/validators-mashumaro/tests/: test_validator.py
libs/validators-msgspec/: README.md  pyproject.toml
libs/validators-msgspec/src/amortsched/validators/vmsgspec/: __init__.py
libs/validators-msgspec/tests/: test_validator.py
libs/validators-pydanticv2/: README.md  pyproject.toml
libs/validators-pydanticv2/src/amortsched/validators/vpydanticv2/: __init__.py
libs/validators-pydanticv2/tests/: test_validator.py
migrations/: env.py
src/amortsched/: amortization.py  cli.py  entities.py  errors.py  repositories.py  security.py  services.py  validators.py  web.py
src/amortsched/adapters/persistence/: __init__.py  base.py  helpers.py  mappers.py  relationships.py  repositories.py  specifications.py  tables.py  uow.py
src/amortsched/adapters/security/: hashers.py  jwt.py
src/amortsched/api/: app.py  config.py  dependencies.py  errors.py  middleware.py  responses.py
src/amortsched/api/routes/: auth.py  plans.py  schedules.py  users.py
src/amortsched/api/schemas/: auth.py  plans.py  schedules.py  users.py
src/amortsched/app/: ports.py
src/amortsched/app/commands/: plans.py  users.py
src/amortsched/app/queries/: plans.py  schedules.py  users.py
src/amortsched/core/: amortization.py  entities.py  errors.py  repositories.py  security.py  specifications.py  values.py
static/: app.css
templates/: index.html
tests/: conftest.py  test_amortization.py  test_entities.py  test_repositories.py  test_security.py  test_services.py
tests/adapters/persistence/: test_helpers.py
tests/api/: conftest.py  test_auth.py  test_plans.py  test_schedules.py
tests/core/: test_amortization.py
ui/: .dockerignore  Dockerfile  components.json  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tailwind.css  tsconfig.app.json  vite.config.ts
ui/src/: main.tsx
ui/src/components/ui/: AlertDialog.tsx  Button.tsx  Checkbox.tsx  Dialog.tsx  Field.tsx  Form.tsx  Link.tsx  ListBox.tsx  Menu.tsx  Modal.tsx  Popover.tsx  Select.tsx  Separator.tsx  Table.tsx  Tabs.tsx  TextField.tsx  Toast.tsx  button.tsx  field.tsx  input.tsx  label.tsx
ui/src/lib/: api-client.ts  auth.ts  schemas.ts
ui/src/routes/: __root.tsx  _app.tsx  _auth.tsx
ui/src/routes/_app/: index.tsx
ui/src/routes/_auth/: login.tsx  register.tsx
