[project]
name = "amortsched-workspace"
version = "0.1.0"
description = "Workspace root for amortsched apps and libs"
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
workspace = [
    "amortsched-core",
    "amortsched-app",
    "amortsched-auth",
    "amortsched-data-inmemory",
    "amortsched-data-sqlalchemy",
    "amortsched-data-mongo",
    "amortsched-data-tortoise",
    "amortsched-validators-mashumaro",
    "amortsched-validators-pydanticv2",
    "amortsched-validators-msgspec",
    "amortsched-cli",
    "amortsched-api",
    "amortsched-web",
]
dev = ["ruff"]
tests = ["pytest", "httpx"]

[tool.uv.workspace]
members = [
    "apps/cli",
    "apps/api",
    "apps/web",
    "libs/core",
    "libs/app",
    "libs/auth",
    "libs/data-inmemory",
    "libs/data-sqlalchemy",
    "libs/data-mongo",
    "libs/data-tortoise",
    "libs/validators-mashumaro",
    "libs/validators-pydanticv2",
    "libs/validators-msgspec",
]

[tool.uv.sources]
amortsched-core = { workspace = true }
amortsched-app = { workspace = true }
amortsched-auth = { workspace = true }
amortsched-data-inmemory = { workspace = true }
amortsched-data-sqlalchemy = { workspace = true }
amortsched-data-mongo = { workspace = true }
amortsched-data-tortoise = { workspace = true }
amortsched-validators-mashumaro = { workspace = true }
amortsched-validators-pydanticv2 = { workspace = true }
amortsched-validators-msgspec = { workspace = true }
amortsched-cli = { workspace = true }
amortsched-api = { workspace = true }
amortsched-web = { workspace = true }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "libs/core/tests",
    "libs/app/tests",
    "libs/auth/tests",
    "libs/data-inmemory/tests",
    "libs/validators-mashumaro/tests",
    "libs/validators-pydanticv2/tests",
    "libs/validators-msgspec/tests",
    "apps/api/tests",
    "apps/web/tests",
]

[tool.pyright]
reportMissingImports = false
reportMissingTypeStubs = false
extraPaths = [
    "libs/core/src",
    "libs/app/src",
    "libs/auth/src",
    "libs/data-inmemory/src",
    "libs/data-sqlalchemy/src",
    "libs/data-mongo/src",
    "libs/data-tortoise/src",
    "libs/validators-mashumaro/src",
    "libs/validators-pydanticv2/src",
    "libs/validators-msgspec/src",
    "apps/cli/src",
    "apps/api/src",
    "apps/web/src",
]
