[project]
name = "amortsched"
version = "0.1.0"
description = "Amortization schedule generator API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard-no-fastapi-cloud-cli]",
  "uvicorn[standard]",
  "python-multipart",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "psycopg[binary]",
  "alembic",
  "structlog",
  "python-jose[cryptography]",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-sugar",
  "pytest-cov",
  "httpx",
  "faker",
  "factory-boy",
  "pytest-factoryboy",
  "testcontainers",
]
lint = ["ruff"]
dev = [
  "debugpy",
  "icecream",
  "ipython",
  { include-group = "lint" },
  { include-group = "test" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]

[tool.uv]
exclude-newer = "1d"
exclude-newer-package = { ruff = "3h" }
default-groups = "all"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
reportMissingImports = false
reportMissingTypeStubs = false
extraPaths = ["src"]
