[project]
name = "amortsched-api"
version = "0.1.0"
description = "Starlette REST API application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "amortsched-auth",
    "amortsched-data-inmemory",
    "mashumaro[orjson]",
    "orjson",
    "rodi",
    "starlette",
]

[dependency-groups]
tests = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
