[project]
name = "amortsched-cli"
version = "0.1.0"
description = "CLI app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "amortsched-data-inmemory",
    "click",
    "msgspec",
    "rodi",
]

[project.scripts]
amortsched = "amortsched.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
