[project]
name = "amortsched-web"
version = "0.1.0"
description = "FastAPI + Strawberry web application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "amortsched-auth",
    "amortsched-data-inmemory",
    "fastapi",
    "pydantic>=2",
    "rodi",
    "strawberry-graphql",
]

[dependency-groups]
tests = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
