[project]
name = "amortsched-app"
version = "0.1.0"
description = "Application use cases and ports"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["amortsched-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
