[project]
name = "amortsched-core"
version = "0.1.0"
description = "Core domain model and amortization logic"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
