[project]
name = "amortsched-data-inmemory"
version = "0.1.0"
description = "In-memory repositories"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["amortsched-app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
