[project]
name = "amortsched-data-mongo"
version = "0.1.0"
description = "MongoDB repositories"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["amortsched-app", "pymongo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
