[project]
name = "amortsched-data-sqlalchemy"
version = "0.1.0"
description = "SQLAlchemy repositories"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["amortsched-app", "sqlalchemy[asyncio]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
