[project]
name = "amortsched-data-tortoise"
version = "0.1.0"
description = "Tortoise ORM repositories"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["amortsched-app", "tortoise-orm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
