[project]
name = "amortsched-validators-mashumaro"
version = "0.1.0"
description = "Mashumaro-based validator adapter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "mashumaro[orjson]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
