[project]
name = "amortsched-validators-msgspec"
version = "0.1.0"
description = "msgspec-based validator adapter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "msgspec",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
