[project]
name = "amortsched-validators-pydanticv2"
version = "0.1.0"
description = "Pydantic v2 based validator adapter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amortsched-app",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amortsched"]
